add create categories in bulk
